dsl: inline GraphCursor back into WorkflowBuilder
Fold the open-end wiring back into WorkflowBuilder as one class again,
keeping the List<OpenEnd> internals (no parallel arrays). The cursor's
state (startSink, enclosingJoinId, openEnds + the Edge/OpenEnd types) and
its methods (attach/routeInto/openAt/wireOpenEndsTo/addOpenEndAlt/absorb)
are now a private "open-end bookkeeping" section; the wireTrue/wireFalse
delegates are dropped in favour of direct pipeline.wireNext/wireAlt at
the few fixed-edge call sites. Deletes GraphCursor. Pure refactor; full
suite green.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TaXmp5hT2eRgEgQNngcJd9